--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -246,7 +246,7 @@ state[i]
 `@sct`
 ```{r}
 test_error()
-test_object("states", undefined_msg = "Define states first!", incorrect_msg = "Assign state values from dataset to object.")
+test_object("state", undefined_msg = "Define states first!", incorrect_msg = "Assign state values from dataset to object.")
 test_output_contains("states[which.min(murders$population)]", incorrect_msg = "Copy code from instructions.")
 success_msg("Awesome! Now we have the names of the states as well!")
 ```
