--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -70,3 +70,114 @@ test_object("city_temps", incorrect_msg = "Create a dataframe following the same
 test_error()
 success_msg("Great job!")
 ```
+
+---
+## Vectorized operations continued
+
+We can use some of what we have learned to perform calculations that 
+would otherwise be quite complicated. Let's see an example.
+
+
+```yaml
+type: NormalExercise
+key: 657f51ea05
+lang: r
+xp: 100
+skills: 1
+```
+
+
+`@instructions`
+What is the sum of the following equation: `1 + 1/2^2 + 1/3^2 + ... + 1/100^2`? Use command `sum(1/x^2)`.
+Thanks to Euler we know it should be close to $\pi^2/6$. 
+
+`@hint`
+This is a series.
+
+`@pre_exercise_code`
+```{r}
+# no pec 
+```
+
+`@sample_code`
+```{r}
+# Define an object `x` with the numbers 1 through 100
+
+# Sum the equation 
+
+```
+
+`@solution`
+```{r}
+# Define an object `x` with the numbers 1 through 100
+x <- seq(1, 100)
+
+# Sum the equation 
+sum(1/x^2) 
+```
+
+`@sct`
+```{r}
+test_error()
+test_object("x", undefined_msg = "Define x first!", incorrect_msg = "Use the sequence command to store 1,100 in x.")
+test_function("sum", incorrect_msg = "Use the code given in the instructions.")
+success_msg("Good job!")
+```
+
+---
+## Vectorized operation continued
+
+```yaml
+type: NormalExercise
+key: e5215311fc
+lang: r
+xp: 100
+skills: 1
+```
+
+
+`@instructions`
+Compute the per 100,000 murder rate for each state and store it in the object `murder_rate`. 
+Then compute the average murder rate for the US using the function `mean`. What is the average?
+
+`@hint`
+
+`@pre_exercise_code`
+```{r}
+library(dslabs)
+data(murders)
+```
+
+`@sample_code`
+```{r}
+# Load the data
+library(dslabs)
+data(murders)
+
+# Store the per 100,000 murder rate for each state in `murder_rate`
+
+# Calculate the average murder rate in the US 
+
+```
+
+`@solution`
+```{r}
+# Load the data
+library(dslabs)
+data(murders)
+
+# Store the per 100,000 murder rate for each state in `murder_rate`
+murder_rate <- murders$total/murders$population*100000
+
+# Calculate the average murder rate in the US
+mean(murder_rate)
+
+```
+
+`@sct`
+```{r}
+test_error()
+test_object("murder_rate", incorrect_msg = "")
+test_function("mean", incorrect_msg = "")
+success_msg("Awesome!")
+```
